Revert "fixed issue on mobile where footer was wrong size"
This reverts commit 9ac32b04add8f27579f01b1e1ba24e1ecbc34954.

--- a/assets/css/queries.css
+++ b/assets/css/queries.css
@@ -34,6 +34,7 @@ instead, 1rem = 1em = 16px */
   }
 
   .splash {
+    height: 100vh;
     justify-content: flex-start;
   }
 
@@ -42,12 +43,16 @@ instead, 1rem = 1em = 16px */
     text-align: center;
   }
 
+  h3 {
+    font-size: 3.2rem;
+  }
+
   .tooltip:hover .tooltiptext {
     visibility: hidden;
   }
 
   .copyright {
-    font-size: 1.4rem;
+    font-size: 1.6rem;
   }
 
   .resume {
@@ -77,13 +82,5 @@ instead, 1rem = 1em = 16px */
   h1 {
     font-size: 4.2rem;
     text-align: center;
-  }
-
-  h2 {
-    font-size: 2.4rem;
-  }
-
-  h3 {
-    font-size: 1.8rem;
   }
 }
