--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -20,11 +20,8 @@ body {
   font-family: 'Open Sans', sans-serif;
   color: #343a40;
   background-color: #f1f1f1;
-  /* min-width: 54rem; */
+  min-width: 54rem;
   /* border-bottom: 16px solid #343a40; */
-
-  display: flex;
-  flex-direction: column;
 }
 
 hr {
@@ -39,11 +36,10 @@ hr {
 }
 
 .splash {
-  min-height: 100vh;
+  height: 100vh;
   display: flex;
   justify-content: center;
   flex-direction: column;
-  margin-bottom: 4.8rem;
 }
 
 h1 {
@@ -94,7 +90,7 @@ li {
   border-radius: 50%;
 }
 
-/* INFO */
+/* CONTACT */
 
 .resume {
   margin-bottom: 2rem;
@@ -172,8 +168,8 @@ li {
 /* FOOTER  */
 
 footer {
-  /* background-color: white; */
-  padding: 0 3.2rem 6.4rem 3.2rem;
+  background-color: white;
+  padding: 6.4rem 0;
 }
 
 .copyright {
